Wed Apr 14 19:27:29 2004  Ossama Othman  <ossama@dre.vanderbilt.edu>

	* ace/os_include/os_unistd.h (_POSIX_TIMER_MAX):
	  (ACE_DEFAULT_TIMERS):

	  Moved definitions of these macros to other more appropriate
	  files described below.

	* ace/os_include/os_limits.h (_POSIX_TIMER_MAX):

	  Moved conditional definition of this macro to this file to avoid
	  potential definition before the one in <limits.h>.  Fixes macro
	  redefinition warnings.

	* ace/Default_Constants.h (ACE_DEFAULT_TIMERS):

	  Moved conditional definition of this macro to this file.  It
	  didn't make much sense to define it in the os_unistd.h
	  portability header.

Wed Apr 14 17:28:21 2004  Ossama Othman  <ossama@dre.vanderbilt.edu>

	* include/makeinclude/platform_qnx_rtp_gcc.GNU:

	  Corrected "fuzz" error regarding missing RCS ID.

Wed Apr 14 23:03:20 2004  Marek Brudka  <mbrudka@elka.pw.edu.pl>

	* ace/DLL_Manager.cpp:

	  Additional validation in DLL_Handle::symbol.

	* ace/Mem_Map.cpp:

	  QNX NTO cannot mmap regular files, but can map shared
	  memory.  Mem_Map was modified for QNX NTO the same it was done
	  for CHORUS, namely ::open and ::unlink was replaced by
	  resp. ::shm_open and ::shm_unlink in QNX NTO section. This is
	  only a partial bugfix, as one it prevents mapping ordinary
	  files.

	* tests/Mem_Map_Test.cpp:

	  ::open in QNX NTO  sections was replaced by Mem_Map::open to
	  ensure ::shm_open is invoked.

Wed Apr 14 17:17:22 2004  Steve Huston  <shuston@riverace.com>

	* ace/config-hpux-11.00.h: Fixed missing end-of-comment mark that
	  no-oped much of this file. Thanks to the compiler for all the
	  help finding this one.... NOT!

Wed Apr 14 14:09:19 2004  Ossama Othman  <ossama@dre.vanderbilt.edu>

	* ace/os_include/os_unistd.h (ACE_DEFAULT_TIMERS, _SC_TIMER_MAX):

	  #define ACE_DEFAULT_TIMERS to _POSIX_TIMER_MAX, not
	  _SC_TIMER_MAX.  The latter is a parameter meant to be passed to
	  the sysconf() C library function.  It does not represent the