@@ -1,3 +1,12 @@
+Wed Apr 14 20:29:52 2004  Ossama Othman  <ossama@dre.vanderbilt.edu>
+
+	* ace/OS_NS_Thread.cpp (thr_create):
+
+          Explicitly cast the unused returned values of two
+	  ACE_ADAPT_RETVAL macro calls to "void" to address a "right-hand
+	  operand of comma has no effect" warning exhibited by GNU g++ 3.4
+	  (pre-release).
+
 Wed Apr 14 19:27:29 2004  Ossama Othman  <ossama@dre.vanderbilt.edu>
 
 	* ace/os_include/os_unistd.h (_POSIX_TIMER_MAX):
